<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/torch1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.torch.CountdownActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/hello_world"
        />

    <TextView
        android:id="@+id/alarmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/alarm_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <TimePicker
        android:id="@+id/alarmTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alarmTextView"
        android:layout_below="@+id/alarmTextView"
        android:layout_marginTop="50dp"
        android:background="#d3d3d3" />

    <TextView
        android:id="@+id/soundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/alarmTextView"
        android:layout_marginBottom="98dp"
        android:text="@string/soundTextView" />

    <CheckBox
        android:id="@+id/soundCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/soundView"
        android:layout_alignBottom="@+id/soundView"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginRight="110dp"
        android:background="#FFFFFF" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/soundView"
        android:text="@string/save_button" 
        android:textColor="#FFFFFF"
        android:onClick="saveClick"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/saveButton"
        android:onClick="sendClick"
        android:text="@string/send_button_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/receiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginBottom="10dp"
        android:text="@string/receive_btn" 
        android:textColor="#FFFFFF"
        android:onClick="receiveClick"/>

</RelativeLayout>